hphp/hack/test/typecheck/enum_class/constant_cycle.bad.php.rust_elab.exp
File "constant_cycle.bad.php", line 3, characters 12-12:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
File "constant_cycle.bad.php", line 9, characters 12-12:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
File "constant_cycle.bad.php", line 12, characters 12-12:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
File "constant_cycle.bad.php", line 4, characters 7-7:
Cannot declare self-referencing constant X in B (Typing[4424])
File "constant_cycle.bad.php", line 5, characters 7-7:
Cannot declare self-referencing constant Y in B (Typing[4424])
File "constant_cycle.bad.php", line 13, characters 7-7:
Cannot declare self-referencing constant X in E (Typing[4424])
