hphp/hack/test/typecheck/enum_class/constant_cycle.bad.php
<?hh

enum class B : int {
  int X = B::X;
  int Y = self::Y;
}


enum class F : int extends E {
}

enum class E : int {
  int X = F::X;
}
